test/typeCheckTest/fail/test40.ic
class MoreBadWhile {
	void test () {
	
	}
	
	void main (string [] args) {
		while (test()) {
			//do things
		}
	}
}